--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ToDo List</title>
+    <link rel="stylesheet" href="./style/reset.css">
+    <link rel="stylesheet" href="./style/index.css">
     
     
     <script src="https://kit.fontawesome.com/60df34a230.js" crossorigin="anonymous"></script>
@@ -26,7 +28,7 @@
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./prizes.html">Prizes</a></li>
                 <li><a href="./tasks.html">Tasks</a></li>
-                <li><a href="./about.html">About us</a></li>
+                <li><a href="./about.html">About </a></li>
 
             </ul>
         </nav>
